[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/actors/jovem_ali/jovem_ali.tres" type="Texture" id=1]
[ext_resource path="res://assets/actors/jovem_ali/jovem_ali1.tres" type="Texture" id=2]
[ext_resource path="res://assets/actors/jovem_ali/jovem_ali_looking.tres" type="Texture" id=3]
[ext_resource path="res://src/enemis/JovemAli.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 632, 352 )

[sub_resource type="CircleShape2D" id=2]
radius = 136.0

[node name="JovemAli" type="KinematicBody2D"]
position = Vector2( 144, 120 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 5 )

[node name="ali0" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="ali1" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="ali_looking" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="ali_looking"]
layer = -9

[node name="ColorRect" type="ColorRect" parent="ali_looking/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.988235, 0.215686, 0.215686, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VigilanceArea" type="Area2D" parent="."]
modulate = Color( 0.827451, 0.843137, 0, 1 )
position = Vector2( 816, 376 )
monitorable = false
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="VigilanceArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="LookTimer" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="VigilanceArea" to="." method="_on_VigilanceArea_body_entered"]
[connection signal="body_exited" from="VigilanceArea" to="." method="_on_VigilanceArea_body_exited"]
[connection signal="timeout" from="LookTimer" to="." method="_on_LookTimer_timeout"]
